--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/code1.png" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Full Stack Developer | Nacho Dalesio</title>
+    <title>Portfolio</title>
+    <base href="/" />
   </head>
   <body>
     <div id="root"></div>
