--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,6 +10,8 @@
     <meta property="og:title" content="Portfolio || Full Stack Developer" />
     <meta property="og:description" content="Portfolio de desarrollador Full Stack, con proyectos en desarrollo web." />
     <meta property="og:image" content="https://portfolio-web-119j.onrender.com/LogoDevLetSinFondo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:url" content="https://portfolio-web-119j.onrender.com/" />
     <meta property="og:type" content="website" />
     
