--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/LogoDevLetSinFondo.png" />
+    <link rel="icon" type="image/svg+xml" href="/CODLETSINFONDO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio || Full Stack Developer</title>
     
