--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/CODLETSINFONDO.png" />
+    <!-- Favicon configuración -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <meta name="theme-color" content="#40A0E0" />
+    <!-- Fin favicon configuración -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio || Full Stack Developer</title>
     
